// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Act II economy tuning > generates deterministic Act II reward, vault, and shop surfaces from fresh save context > fresh act II economy 1`] = `
{
  "act": {
    "id": "act_core_descent",
    "label": "Act II",
    "priceAdjustment": 1,
    "rewardTier": "escalated",
    "stockBonus": 1,
  },
  "eliteRewards": [
    [
      "item_forkline_dynamo",
      "route source",
    ],
    [
      "item_lane_splitter_chisel",
      "Elite pool",
    ],
    [
      "item_claimant_arc_seal",
      "elite source",
    ],
  ],
  "rerollCosts": [
    3,
    4,
  ],
  "shop": {
    "count": 4,
    "items": [
      [
        "item_rebound_freight_seal",
        18,
        "shop source",
      ],
      [
        "item_crossfeed_detonator",
        22,
        "boss source",
      ],
      [
        "item_scrap_saints_relay",
        15,
        "Shop pool",
      ],
      [
        "item_laser_tax_stamp",
        19,
        "Shop pool",
      ],
    ],
  },
  "vaultRewards": [
    [
      "item_plasma_bloom_filter",
      "vault source",
    ],
    [
      "item_excess_warhead_clause",
      "vault source",
    ],
    [
      "item_strata_bore_collimator",
      "vault source",
    ],
  ],
}
`;

exports[`Act II economy tuning > generates deterministic progressed-save Act II economy without changing upgrade accounting > progressed act II economy 1`] = `
{
  "act": {
    "id": "act_core_descent",
    "label": "Act II",
    "priceAdjustment": 1,
    "rewardTier": "escalated",
    "stockBonus": 1,
  },
  "eliteRewards": [
    [
      "item_forkline_dynamo",
      "route source",
    ],
    [
      "item_lane_splitter_chisel",
      "Elite pool",
    ],
    [
      "item_claimant_arc_seal",
      "elite source",
    ],
  ],
  "rerollCosts": [
    3,
    4,
  ],
  "shop": {
    "count": 5,
    "items": [
      [
        "item_rebound_freight_seal",
        17,
        "shop source",
      ],
      [
        "item_crossfeed_detonator",
        21,
        "boss source",
      ],
      [
        "item_credit_reroute_fuse",
        14,
        "Shop pool",
      ],
      [
        "item_coin_operated_cannon",
        18,
        "Shop pool",
      ],
      [
        "item_salvage_dividend_chip",
        16,
        "Shop pool",
      ],
    ],
  },
  "vaultRewards": [
    [
      "item_plasma_bloom_filter",
      "vault source",
    ],
    [
      "item_excess_warhead_clause",
      "vault source",
    ],
    [
      "item_strata_bore_collimator",
      "vault source",
    ],
    [
      "item_overkill_ledger",
      "vault source",
    ],
  ],
}
`;

exports[`Act II economy tuning > keeps inter-act junction effects deterministic for fresh and progressed saves > fresh junction economy effects 1`] = `
[
  {
    "effects": {
      "creditsDelta": -4,
      "curseDelta": 0,
      "hullPatchDelta": 1,
      "rewardBiasTags": [],
      "rewardChoiceBonus": 0,
      "riskLabel": null,
      "routeIntel": false,
      "salvageDelta": 0,
      "shopDiscount": 0,
    },
    "id": "act_outer_rim-act_core_descent-1-repair",
    "kind": "repair",
  },
  {
    "effects": {
      "creditsDelta": 0,
      "curseDelta": 0,
      "hullPatchDelta": 0,
      "rewardBiasTags": [
        "heat",
      ],
      "rewardChoiceBonus": 0,
      "riskLabel": null,
      "routeIntel": false,
      "salvageDelta": 0,
      "shopDiscount": 0,
    },
    "id": "act_outer_rim-act_core_descent-2-reward",
    "kind": "reward",
  },
  {
    "effects": {
      "creditsDelta": 0,
      "curseDelta": 0,
      "hullPatchDelta": 0,
      "rewardBiasTags": [],
      "rewardChoiceBonus": 0,
      "riskLabel": null,
      "routeIntel": false,
      "salvageDelta": 3,
      "shopDiscount": 0,
    },
    "id": "act_outer_rim-act_core_descent-3-salvage",
    "kind": "salvage",
  },
]
`;

exports[`Act II economy tuning > keeps inter-act junction effects deterministic for fresh and progressed saves > progressed junction economy effects 1`] = `
[
  {
    "effects": {
      "creditsDelta": -3,
      "curseDelta": 0,
      "hullPatchDelta": 1,
      "rewardBiasTags": [],
      "rewardChoiceBonus": 0,
      "riskLabel": null,
      "routeIntel": false,
      "salvageDelta": 0,
      "shopDiscount": 0,
    },
    "id": "act_outer_rim-act_core_descent-1-repair",
    "kind": "repair",
  },
  {
    "effects": {
      "creditsDelta": 0,
      "curseDelta": 0,
      "hullPatchDelta": 0,
      "rewardBiasTags": [
        "heat",
      ],
      "rewardChoiceBonus": 0,
      "riskLabel": null,
      "routeIntel": false,
      "salvageDelta": 0,
      "shopDiscount": 0,
    },
    "id": "act_outer_rim-act_core_descent-2-reward",
    "kind": "reward",
  },
  {
    "effects": {
      "creditsDelta": 0,
      "curseDelta": 1,
      "hullPatchDelta": 0,
      "rewardBiasTags": [
        "curse",
        "overkill",
      ],
      "rewardChoiceBonus": 0,
      "riskLabel": "Overburn risk +1 curse",
      "routeIntel": false,
      "salvageDelta": 5,
      "shopDiscount": 0,
    },
    "id": "act_outer_rim-act_core_descent-3-risk",
    "kind": "risk",
  },
]
`;
